--- a/praca.ipynb
+++ b/praca.ipynb
@@ -618,7 +618,7 @@
     }
    ],
    "source": [
-    "# Pozbycie się konsultacji wspominających o przeszłej resuscytacji \n",
+    "# Pozbycie się konsultacji wspominających o przeszłej resuscytacji ('BRAK')\n",
     "df = df[df['report'] != 'BRAK']\n",
     "\n",
     "df.reset_index(drop=True, inplace=True)\n",
@@ -678,21 +678,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Liczba wystąpień mechanizmów wystąpienia NZK:\n",
       "   mechanism  count\n",
       "0  asystolia    173\n",
       "1         VF     44\n",
       "2        PEA     95\n",
+      "\n",
+      "Liczba wystąpień mechanizmów współistniejących:\n",
       "      co_occurrence  count\n",
       "0   (VF, asystolia)     20\n",
       "1         (PEA, VF)      8\n",
       "2  (PEA, asystolia)     30\n",
+      "\n",
+      "Proporcje wystąpień mechanizmów NZK:\n",
       "   mechanism  proportion\n",
       "0  asystolia    0.638376\n",
       "1         VF    0.162362\n",
@@ -733,8 +738,12 @@
     "mechanism_proportions_df.reset_index(inplace=True)\n",
     "mechanism_proportions_df.rename(columns={\"index\": \"mechanism\"}, inplace=True)\n",
     "\n",
+    "# Wyniki statystyki\n",
+    "print(\"Liczba wystąpień mechanizmów wystąpienia NZK:\")\n",
     "print(mechanism_counts_df)\n",
+    "print(\"\\nLiczba wystąpień mechanizmów współistniejących:\")\n",
     "print(co_occurrence_counts_df)\n",
+    "print(\"\\nProporcje wystąpień mechanizmów NZK:\")\n",
     "print(mechanism_proportions_df)"
    ]
   },
@@ -754,13 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Statystyki czasu:\n",
       "                               Metric       Value\n",
       "0                     Najkrótszy czas    1.000000\n",
       "1                     Najdłuższy czas  288.000000\n",
@@ -796,6 +806,7 @@
     "\n",
     "time_stats_df = pd.DataFrame(list(time_stats.items()), columns=[\"Metric\", \"Value\"])\n",
     "\n",
+    "print(\"Statystyki czasu:\")\n",
     "print(time_stats_df)"
    ]
   },
@@ -814,21 +825,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Wyliczenie wykorzystanych leków:\n",
       "            count\n",
       "adrenalina    176\n",
       "amiodaron      12\n",
       "bikarbonat     37\n",
       "inne leki      48\n",
+      "\n",
+      "Proporcja wykorzystanych urządzeń:\n",
       "       proportion\n",
       "ambu     0.332103\n",
       "lucas    0.225092\n",
+      "\n",
+      "Wyliczenie współwystąpień w metodyce RKO:\n",
       "                             count\n",
       "(defibrylacja, intubacja)       40\n",
       "(defibrylacja, masaż serca)     39\n",
@@ -900,9 +916,164 @@
     "methodology_cooccurrences_df = pd.DataFrame.from_dict(methodology_cooccurrences, orient=\"index\", columns=[\"count\"]).sort_index()\n",
     "\n",
     "# Przykładowe wyniki\n",
+    "print(\"Wyliczenie wykorzystanych leków:\")\n",
     "print(medication_counts_df)\n",
+    "print(\"\\nProporcja wykorzystanych urządzeń:\")\n",
     "print(device_proportions_df)\n",
+    "print(\"\\nWyliczenie współwystąpień w metodyce RKO:\")\n",
     "print(methodology_cooccurrences_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wyniki \n",
+    "\n",
+    "1. **Liczba raportów** z ROSC i liczba raportów zgonów.\n",
+    "2. **Proporcja ROSC do zgonów**.\n",
+    "3. **Zależność wyniku** od mechanizmów (np. ROSC w raportach z VF vs. asystolią).\n",
+    "4. **Zależność wyniku** od procedur (np. jaki procent ROSC wystąpił po defibrylacji?).\n",
+    "5. **Zależność wyniku** od czasu trwania resuscytacji (np. jaka była średnia długość resuscytacji dla raportów z ROSC?)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wyniki raportów:\n",
+      "      count\n",
+      "ROSC    112\n",
+      "zgon    163\n",
+      "\n",
+      "Proporcje ROSC i zgonów:\n",
+      "                 proportion\n",
+      "Proporcja ROSC     0.413284\n",
+      "Proporcja zgonu    0.601476\n",
+      "\n",
+      "Zależności wyniku od mechanizmu NZK:\n",
+      "           Proporcja ROSC  Proporcja zgonu\n",
+      "asystolia        0.358382         0.653179\n",
+      "VF               0.613636         0.386364\n",
+      "PEA              0.368421         0.652632\n",
+      "\n",
+      "Zależności wyniku od podjętych procedur:\n",
+      "              Proporcja ROSC  Proporcja zgonu\n",
+      "adrenalina          0.420455         0.590909\n",
+      "ambu                0.433333         0.577778\n",
+      "intubacja           0.408907         0.607287\n",
+      "lucas               0.311475         0.688525\n",
+      "masaż serca         0.383260         0.625551\n",
+      "amiodaron           0.750000         0.250000\n",
+      "defibrylacja        0.571429         0.428571\n",
+      "inne leki           0.416667         0.604167\n",
+      "bikarbonat          0.405405         0.594595\n",
+      "\n",
+      "Statystyki czasu:\n",
+      "                                                0\n",
+      "Średni czas dla ROSC                    24.607843\n",
+      "Mediana czasu dla ROSC                  20.000000\n",
+      "Odchylenie standardowe dla czasu ROSC   22.763197\n",
+      "Średni czas dla zgonu                   39.270588\n",
+      "Mediana czasu dla zgonu                 32.000000\n",
+      "Odchylenie standardowe dla czasu zgonu  35.032770\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sprawdzenie czy kolumna 'result' jest listą\n",
+    "if \"result\" in df_processed.columns:\n",
+    "    df_processed.loc[:, \"result\"] = df_processed[\"result\"].apply(\n",
+    "        lambda x: x if isinstance(x, list) else []\n",
+    "    )\n",
+    "else:\n",
+    "    raise ValueError(\"The 'result' column does not exist in the DataFrame.\")\n",
+    "\n",
+    "# Sprawdzenie czy kolumna 'mechanisms' jest listą\n",
+    "if \"mechanisms\" in df_processed.columns:\n",
+    "    df_processed.loc[:, \"mechanisms\"] = df_processed[\"mechanisms\"].apply(\n",
+    "        lambda x: x if isinstance(x, list) else []\n",
+    "    )\n",
+    "\n",
+    "# Sprawdzenie czy kolumna 'time' jest numeryczna\n",
+    "if \"time\" in df_processed.columns:\n",
+    "    df_processed.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n",
+    "\n",
+    "# 1. Liczba raportów dla każdego wyniku\n",
+    "result_counts = Counter([res for results in df_processed[\"result\"] for res in results])\n",
+    "\n",
+    "# 2. Proporcja ROSC do zgonów \n",
+    "total_reports = len(df_processed)\n",
+    "proportion_rosc_death = {\n",
+    "    \"Proporcja ROSC\": result_counts.get(\"ROSC\", 0) / total_reports,\n",
+    "    \"Proporcja zgonu\": result_counts.get(\"zgon\", 0) / total_reports,\n",
+    "}\n",
+    "\n",
+    "# 3. Zależność wyniku od mechanizmów NZK\n",
+    "result_mechanism_dependency = {}\n",
+    "for mechanism in [\"asystolia\", \"VF\", \"PEA\"]:\n",
+    "    subset = df_processed[df_processed[\"mechanisms\"].apply(lambda mechs: mechanism in mechs)]\n",
+    "    rosc_count = subset[\"result\"].apply(lambda results: \"ROSC\" in results).sum()\n",
+    "    death_count = subset[\"result\"].apply(lambda results: \"zgon\" in results).sum()\n",
+    "    total = len(subset)\n",
+    "    result_mechanism_dependency[mechanism] = {\n",
+    "        \"Proporcja ROSC\": rosc_count / total if total > 0 else 0,\n",
+    "        \"Proporcja zgonu\": death_count / total if total > 0 else 0,\n",
+    "    }\n",
+    "\n",
+    "# 4. Zależność wyniku od procedur\n",
+    "procedure_result_dependency = {}\n",
+    "for procedure in df_processed[\"procedures\"].explode().unique():\n",
+    "    if pd.isna(procedure):\n",
+    "        continue\n",
+    "    subset = df_processed[df_processed[\"procedures\"].apply(lambda procs: procedure in procs)]\n",
+    "    rosc_count = subset[\"result\"].apply(lambda results: \"ROSC\" in results).sum()\n",
+    "    death_count = subset[\"result\"].apply(lambda results: \"zgon\" in results).sum()\n",
+    "    total = len(subset)\n",
+    "    procedure_result_dependency[procedure] = {\n",
+    "        \"Proporcja ROSC\": rosc_count / total if total > 0 else 0,\n",
+    "        \"Proporcja zgonu\": death_count / total if total > 0 else 0,\n",
+    "    }\n",
+    "\n",
+    "# 5. Zależność wyniku od czasu\n",
+    "rosc_subset = df_processed[df_processed[\"result\"].apply(lambda results: \"ROSC\" in results)]\n",
+    "death_subset = df_processed[df_processed[\"result\"].apply(lambda results: \"zgon\" in results)]\n",
+    "\n",
+    "ros_time_stats = {\n",
+    "    \"Średni czas dla ROSC\": rosc_subset[\"time\"].mean(),\n",
+    "    \"Mediana czasu dla ROSC\": rosc_subset[\"time\"].median(),\n",
+    "    \"Odchylenie standardowe dla czasu ROSC\": rosc_subset[\"time\"].std(),\n",
+    "}\n",
+    "\n",
+    "zgon_time_stats = {\n",
+    "    \"Średni czas dla zgonu\": death_subset[\"time\"].mean(),\n",
+    "    \"Mediana czasu dla zgonu\": death_subset[\"time\"].median(),\n",
+    "    \"Odchylenie standardowe dla czasu zgonu\": death_subset[\"time\"].std(),\n",
+    "}\n",
+    "\n",
+    "# Wyniki do formy df\n",
+    "result_counts_df = pd.DataFrame.from_dict(result_counts, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "proportion_rosc_death_df = pd.DataFrame.from_dict(proportion_rosc_death, orient=\"index\", columns=[\"proportion\"])\n",
+    "result_mechanism_dependency_df = pd.DataFrame.from_dict(result_mechanism_dependency, orient=\"index\")\n",
+    "procedure_result_dependency_df = pd.DataFrame.from_dict(procedure_result_dependency, orient=\"index\")\n",
+    "time_stats_df = pd.DataFrame({**ros_time_stats, **zgon_time_stats}, index=[0]).transpose()\n",
+    "\n",
+    "# Przykłady wyników \n",
+    "print(\"Wyniki raportów:\")\n",
+    "print(result_counts_df)\n",
+    "print(\"\\nProporcje ROSC i zgonów:\")\n",
+    "print(proportion_rosc_death_df)\n",
+    "print(\"\\nZależności wyniku od mechanizmu NZK:\")\n",
+    "print(result_mechanism_dependency_df)\n",
+    "print(\"\\nZależności wyniku od podjętych procedur:\")\n",
+    "print(procedure_result_dependency_df)\n",
+    "print(\"\\nStatystyki czasu:\")\n",
+    "print(time_stats_df)"
    ]
   },
   {
