small fixes before latex

--- a/praca.ipynb
+++ b/praca.ipynb
@@ -12,7 +12,9 @@
    "metadata": {},
    "source": [
     "## Wstęp \n",
-    "Celem niniejszej pracy jest zaprojektowanie i implementacja systemu przetwarzania szpitalnych raportów resuscytacyjnych. Praca skupi się na opracowaniu programu umożliwiającego efektowną i dokładną analizę przebiegu wielu interwencji naraz oraz wyciągnięciu wniosków, które mogą poprawić procedury medyczne. "
+    "Celem niniejszej pracy jest zaprojektowanie i implementacja systemu przetwarzania szpitalnych raportów resuscytacyjnych. \n",
+    "\n",
+    "Praca skupi się na opracowaniu programu umożliwiającego efektowną i dokładną analizę przebiegu wielu interwencji naraz oraz wyciągnięciu wniosków, które mogą poprawić procedury medyczne. "
    ]
   },
   {
@@ -67,7 +69,9 @@
    "source": [
     "### Podział raportów na paczki\n",
     "W tej sekcji raporty zostają podzielone na paczki (batches), tak, aby zoptymalizować liczbę tokenów wysyłanych do modelu. \n",
+    "\n",
     "Token to najmniejsza jednostka tekstu przetwarzana przez model językowy, taka jak słowo, część słowa, znak interpunkcyjny lub spacja. W przypadku uzywanego tutaj modelu GPT-4-turbo maksymalna liczba tokenów wynosi 4096, stąd zapytanie razem z raportami musi mieścić się w tym zakresie.\n",
+    "\n",
     "Instrukcja wysyłana jest do modelu razem z kolejnymi paczkami az do momentu wyczerpania paczek. "
    ]
   },
@@ -183,6 +187,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Przetwarzanie danych"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prompt i przetwarzanie odpowiedzi modelu\n",
     "Prompt wysyłany do modelu ma dwie funkcje. \n",
     "\n",
@@ -190,33 +201,41 @@
     "\n",
     "2. Zwrócenie przez model odpowiedzi na raport resuscytacyjny w postaci oddzielonych od siebie przecinkiem słów kluczowych (takich jak asystolia, ambu, defibrylacja, ROSC), które mają informować w jak najbardziej skróconej i gotowej do przetworzenia formie o procedurach, jakie miały miejsce podczas resuscytacji. \n",
     "\n",
-    "Treść wszystkich raportów jest wysoce róznorodna i pojawiają się w nich takze informacje o np. problemach związanych z intubacją, chorobach współtowarzyszących pacjenta lub kilkukrotnych defibrylacjach podczas jednej resuscytacji. W promptcie skupiono się jednak na najczęściej powtarzanych procedurach, ograniczając \"słownik\" odpowiedzi modelu do konkretnych pojęć. \n",
+    "Treść wszystkich raportów jest wysoce róznorodna i pojawiają się w nich takze informacje o np. problemach związanych z intubacją, chorobach współtowarzyszących pacjenta lub kilkukrotnych defibrylacjach podczas jednej resuscytacji. W promptcie skupiono się jednak na najczęściej powtarzanych procedurach, ograniczając \"słownik\" odpowiedzi modelu do konkretnych pojęć. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Metody prompt engineering \n",
     "\n",
-    "W tej instrukcji wykorzystano następujące metody prompt engineering: \n",
-    "#### Role instruction \n",
+    "W powyzszej instrukcji wykorzystano następujące metody prompt engineering: \n",
+    "\n",
+    "1. **Role instruction**\n",
     "(\"Jesteś specjalistą od analizy danych medycznych\"): Pomaga skoncentrować działanie modelu na odpowiedniej dziedzinie i nadaje kontekst.\n",
     "\n",
-    "#### Explicit instructions\n",
+    "2. **Explicit instructions**\n",
     "Szczegółowo opisano zadanie podziału raportów na dwie kategorie i podano wytyczne, jak postępować w przypadku kazdej z kategorii. \n",
     "\n",
-    "#### Constrained output\n",
+    "3. **Constrained output**\n",
     "Zdefiniowano słownik pojęć, aby zredukować ryzyko uzycia nieodpowiednich terminów. \n",
     "\n",
-    "#### Few-Shot Learning\n",
+    "4. **Few-Shot Learning**\n",
     "Dołączono przykłady raportów i ich odpowiedzi. \n",
     "\n",
-    "#### Standardized Output \n",
+    "5. **Standardized Output** \n",
     "Wymóg utrzymania standardowego formatu odpowiedzi w mianowniku (np. “czas X”, “adrenalina”).\n",
     "\n",
-    "#### Disambiguation \n",
+    "6. **Disambiguation** \n",
     "Rozwiązano potencjalne niejasności poprzez wyjaśnienie wyjątków (np. bradyasystolia → asystolia) oraz oczekiwana reakcja na brak danych (“BRAK”) została zdefiniowana jednoznacznie.\n",
     "\n",
-    "#### Task Prioritization\n",
+    "7. **Task Prioritization**\n",
     "Zadanie jest podzielone na dwa logiczne kroki:\n",
     "\t1.\tPrzyporządkowanie raportu do kategorii.\n",
     "\t2.\tGenerowanie odpowiedzi w formie słów kluczowych lub zwrócenie “BRAK”.\n",
     "\n",
-    "#### Highlighting Key Points\n",
+    "8. **Highlighting Key Points**\n",
     "Uzycie pogrubienia (\"**Kategoria 1**\") i dodatkowych tagów (<\\raporty>) ułatwiające modelowi priorytetyzację."
    ]
   },
@@ -286,48 +305,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_file(str_data, fname=\"summ_data.txt\"):\n",
-    "    \"\"\"\n",
-    "    Checks if a specified file exists. If the file does not exist, it generates summarized data \n",
-    "    using the provided summarize_func and writes it to the file.\n",
-    "\n",
-    "    Parameters:\n",
-    "    fname (str): The name of the file to check or create, default is \"summ_data.txt\".\n",
-    "\n",
-    "    Returns:\n",
-    "    None\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        if os.path.isfile(fname):\n",
-    "            print(f\"File '{fname}' already exists. No action taken.\")\n",
-    "            return\n",
-    "\n",
-    "        with open(fname, \"w\") as f:\n",
-    "            f.write(str_data)\n",
-    "\n",
-    "    except FileNotFoundError as fnf_error:\n",
-    "        print(f\"File not found error: {fnf_error}\")\n",
-    "        raise  \n",
-    "\n",
-    "    except ValueError as ve:\n",
-    "        print(f\"Value error: {ve}\")\n",
-    "        raise\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred: {e}\")\n",
-    "        raise"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import danych do biblioteki pandas i ich przetwarzanie\n"
+    "### Import danych do biblioteki pandas i ich przetwarzanie"
    ]
   },
   {
@@ -354,6 +335,7 @@
     "import pandas as pd\n",
     "import ast \n",
     "\n",
+    "# Wcześniej zapisana odpowiedź modelu w pliku 'summ_data.txt'. Plik odczytano i przekonwertowano na listę\n",
     "with open('summ_data.txt', 'r', encoding='UTF-8') as file:\n",
     "    data_as_string = file.read() \n",
     "\n",
@@ -624,6 +606,26 @@
     "df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "def process_report(report):\n",
+    "    \"\"\"\n",
+    "    Processes a single medical report to extract key components.\n",
+    "\n",
+    "    This function identifies and categorizes elements from a medical report string into \n",
+    "    the following categories:\n",
+    "    - Mechanisms (e.g., \"asystolia\", \"VF\", \"PEA\")\n",
+    "    - Procedures (e.g., \"intubacja\", \"lucas\", \"ambu\", etc.)\n",
+    "    - Results (e.g., \"ROSC\", \"zgon\")\n",
+    "    - Time (e.g., \"czas X\", including ranges like \"czas 20-30\", where the average is calculated)\n",
+    "\n",
+    "    Parameters:\n",
+    "        report (str): The input report string containing comma-separated elements.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the following keys:\n",
+    "            - \"mechanisms\": A sorted list of mechanisms present in the report, or None if absent.\n",
+    "            - \"procedures\": A sorted list of procedures identified in the report.\n",
+    "            - \"result\": A sorted list of results (e.g., \"ROSC\", \"zgon\"), or None if absent.\n",
+    "            - \"time\": The extracted time as a numeric value (or average for ranges), or None if unavailable.\n",
+    "    \"\"\"\n",
     "    # Kategorie\n",
     "    mechanisms = {\"asystolia\", \"VF\", \"PEA\"}\n",
     "    procedures = {\"intubacja\", \"lucas\", \"ambu\", \"masaż serca\", \"defibrylacja\",\n",
@@ -928,7 +930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Wyniki \n",
+    "#### Wyniki resuscytacji\n",
     "\n",
     "1. **Liczba raportów** z ROSC i liczba raportów zgonów.\n",
     "2. **Proporcja ROSC do zgonów**.\n",
@@ -1075,6 +1077,18 @@
     "print(\"\\nStatystyki czasu:\")\n",
     "print(time_stats_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wygenerowanie dokumentu podsumowującego"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
