--- a/praca.ipynb
+++ b/praca.ipynb
@@ -1049,187 +1049,77 @@
    "metadata": {},
    "source": [
     "#### Wyniki resuscytacji\n",
+    "Istotne dane:\n",
     "\n",
     "1. **Liczba raportów** z ROSC i liczba raportów zgonów.\n",
     "2. **Proporcja ROSC do zgonów**.\n",
     "3. **Zależność wyniku** od mechanizmów (np. ROSC w raportach z VF vs. asystolią).\n",
-    "4. **Zależność wyniku** od procedur (np. jaki procent ROSC wystąpił po defibrylacji?).\n",
-    "5. **Zależność wyniku** od czasu trwania resuscytacji (np. jaka była średnia długość resuscytacji dla raportów z ROSC?)."
+    "4. **Zależność wyniku** od czasu trwania resuscytacji (np. jaka była średnia długość resuscytacji dla raportów z ROSC?)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wyniki raportów:\n",
-      "      count\n",
-      "ROSC    112\n",
-      "zgon    163\n",
+      "Wyniki resuscytacji w raportach:\n",
+      "  Wynik  Liczba raportów  Proporcja [%]\n",
+      "0  zgon              163      60.147601\n",
+      "1  ROSC              112      41.328413\n",
       "\n",
-      "Proporcje ROSC i zgonów:\n",
-      "                 proportion\n",
-      "Proporcja ROSC     0.413284\n",
-      "Proporcja zgonu    0.601476\n",
-      "\n",
-      "Zależności wyniku od mechanizmu NZK:\n",
-      "           Proporcja ROSC  Proporcja zgonu\n",
-      "asystolia        0.358382         0.653179\n",
-      "VF               0.613636         0.386364\n",
-      "PEA              0.368421         0.652632\n",
-      "Zależności wyników od leków:\n",
-      "            Proporcja ROSC  Proporcja zgonu\n",
-      "adrenalina        0.420455         0.590909\n",
-      "amiodaron         0.750000         0.250000\n",
-      "bikarbonat        0.405405         0.594595\n",
-      "inne leki         0.416667         0.604167\n",
-      "\n",
-      "Zależności wyników od urządzeń:\n",
-      "       Proporcja ROSC  Proporcja zgonu\n",
-      "ambu         0.433333         0.577778\n",
-      "lucas        0.311475         0.688525\n",
-      "\n",
-      "Zależności wyników od metodyki:\n",
-      "              Proporcja ROSC  Proporcja zgonu\n",
-      "defibrylacja        0.571429         0.428571\n",
-      "intubacja           0.408907         0.607287\n",
-      "masaż serca         0.383260         0.625551\n",
-      "wentylacja          0.000000         0.000000\n",
-      "\n",
-      "Statystyki czasu:\n",
-      "                                                0\n",
-      "Średni czas dla ROSC                    24.607843\n",
-      "Mediana czasu dla ROSC                  20.000000\n",
-      "Odchylenie standardowe dla czasu ROSC   22.763197\n",
-      "Średni czas dla zgonu                   39.270588\n",
-      "Mediana czasu dla zgonu                 32.000000\n",
-      "Odchylenie standardowe dla czasu zgonu  35.032770\n"
+      "Zaleznosc wyniku od mechanizmu NZK:\n",
+      "   Mechanizm  Procent ROSC (%)  Procent zgonów (%)  Średni czas [min]\n",
+      "0  asystolia         35.838150           65.317919          32.137931\n",
+      "1         VF         61.363636           38.636364          50.722222\n",
+      "2        PEA         36.842105           65.263158          37.351852\n"
      ]
     }
    ],
    "source": [
-    "# Sprawdzenie czy kolumna 'result' jest listą\n",
-    "if \"result\" in df_processed.columns:\n",
-    "    df_processed.loc[:, \"result\"] = df_processed[\"result\"].apply(\n",
-    "        lambda x: x if isinstance(x, list) else []\n",
-    "    )\n",
-    "else:\n",
-    "    raise ValueError(\"The 'result' column does not exist in the DataFrame.\")\n",
+    "df_processed[\"result\"] = df_processed[\"result\"].apply(lambda x: x if isinstance(x, list) else [])\n",
     "\n",
-    "# Sprawdzenie czy kolumna 'mechanisms' jest listą\n",
-    "if \"mechanisms\" in df_processed.columns:\n",
-    "    df_processed.loc[:, \"mechanisms\"] = df_processed[\"mechanisms\"].apply(\n",
-    "        lambda x: x if isinstance(x, list) else []\n",
-    "    )\n",
-    "\n",
-    "# Sprawdzenie czy kolumna 'time' jest numeryczna\n",
-    "if \"time\" in df_processed.columns:\n",
-    "    df_processed.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n",
-    "\n",
-    "# 1. Liczba raportów dla każdego wyniku\n",
-    "result_counts = Counter([res for results in df_processed[\"result\"] for res in results])\n",
-    "\n",
-    "# 2. Proporcja ROSC do zgonów \n",
+    "# Generowanie tablicy wynikowej\n",
+    "result_counts = df_processed[\"result\"].explode().value_counts()\n",
     "total_reports = len(df_processed)\n",
-    "proportion_rosc_death = {\n",
-    "    \"Proporcja ROSC\": result_counts.get(\"ROSC\", 0) / total_reports,\n",
-    "    \"Proporcja zgonu\": result_counts.get(\"zgon\", 0) / total_reports,\n",
-    "}\n",
     "\n",
-    "# 3. Zależność wyniku od mechanizmów NZK\n",
-    "result_mechanism_dependency = {}\n",
-    "for mechanism in [\"asystolia\", \"VF\", \"PEA\"]:\n",
-    "    subset = df_processed[df_processed[\"mechanisms\"].apply(lambda mechs: mechanism in mechs)]\n",
+    "result_summary = pd.DataFrame({\n",
+    "    \"Wynik\": result_counts.index,\n",
+    "    \"Liczba raportów\": result_counts.values,\n",
+    "    \"Proporcja [%]\": (result_counts.values / total_reports) * 100\n",
+    "}).reset_index(drop=True)\n",
+    "\n",
+    "# Generowanie tablicy zaleznosci wyniku od mechanizmów NZK\n",
+    "mechanisms = [\"asystolia\", \"VF\", \"PEA\"]\n",
+    "mechanism_dependency_data = []\n",
+    "\n",
+    "for mechanism in mechanisms:\n",
+    "    subset = df_processed[df_processed[\"mechanisms\"].apply(lambda mechs: mechanism in mechs if isinstance(mechs, list) else False)]\n",
+    "    \n",
     "    rosc_count = subset[\"result\"].apply(lambda results: \"ROSC\" in results).sum()\n",
-    "    death_count = subset[\"result\"].apply(lambda results: \"zgon\" in results).sum()\n",
+    "    zgon_count = subset[\"result\"].apply(lambda results: \"zgon\" in results).sum()\n",
+    "    \n",
     "    total = len(subset)\n",
-    "    result_mechanism_dependency[mechanism] = {\n",
-    "        \"Proporcja ROSC\": rosc_count / total if total > 0 else 0,\n",
-    "        \"Proporcja zgonu\": death_count / total if total > 0 else 0,\n",
-    "    }\n",
+    "    avg_time = subset[\"time\"].mean() if total > 0 else np.nan\n",
+    "    \n",
+    "    mechanism_dependency_data.append({\n",
+    "        \"Mechanizm\": mechanism,\n",
+    "        \"Procent ROSC (%)\": (rosc_count / total) * 100 if total > 0 else 0,\n",
+    "        \"Procent zgonów (%)\": (zgon_count / total) * 100 if total > 0 else 0,\n",
+    "        \"Średni czas [min]\": avg_time\n",
+    "    })\n",
     "\n",
-    "# 4. Zależność wyniku od procedur (podział na trzy kategorie)\n",
-    "medications = {\"adrenalina\", \"bikarbonat\", \"amiodaron\", \"inne leki\"}\n",
-    "devices = {\"lucas\", \"ambu\"}\n",
-    "methodology = {\"masaż serca\", \"intubacja\", \"defibrylacja\", \"wentylacja\"}\n",
+    "mechanism_dependency_df = pd.DataFrame(mechanism_dependency_data)\n",
     "\n",
-    "# Tworzenie słowników zależności dla każdej kategorii\n",
-    "medication_result_dependency = {}\n",
-    "device_result_dependency = {}\n",
-    "methodology_result_dependency = {}\n",
+    "# Display the resulting DataFrames\n",
+    "print(\"Wyniki resuscytacji w raportach:\")\n",
+    "print(result_summary)\n",
     "\n",
-    "# Funkcja do obliczenia proporcji wyników dla procedur w danej kategorii\n",
-    "def calculate_dependency(category_set, result_dependency_dict):\n",
-    "    for procedure in category_set:\n",
-    "        subset = df_processed[df_processed[\"procedures\"].apply(lambda procs: procedure in procs)]\n",
-    "        rosc_count = subset[\"result\"].apply(lambda results: \"ROSC\" in results).sum()\n",
-    "        death_count = subset[\"result\"].apply(lambda results: \"zgon\" in results).sum()\n",
-    "        total = len(subset)\n",
-    "        result_dependency_dict[procedure] = {\n",
-    "            \"Proporcja ROSC\": rosc_count / total if total > 0 else 0,\n",
-    "            \"Proporcja zgonu\": death_count / total if total > 0 else 0,\n",
-    "        }\n",
-    "\n",
-    "# Obliczanie zależności dla każdej kategorii\n",
-    "calculate_dependency(medications, medication_result_dependency)\n",
-    "calculate_dependency(devices, device_result_dependency)\n",
-    "calculate_dependency(methodology, methodology_result_dependency)\n",
-    "\n",
-    "# Konwersja do df dla \n",
-    "medication_result_dependency_df = pd.DataFrame.from_dict(\n",
-    "    medication_result_dependency, orient=\"index\"\n",
-    ").sort_index()\n",
-    "\n",
-    "device_result_dependency_df = pd.DataFrame.from_dict(\n",
-    "    device_result_dependency, orient=\"index\"\n",
-    ").sort_index()\n",
-    "\n",
-    "methodology_result_dependency_df = pd.DataFrame.from_dict(\n",
-    "    methodology_result_dependency, orient=\"index\"\n",
-    ").sort_index()\n",
-    "\n",
-    "# 5. Zależność wyniku od czasu\n",
-    "rosc_subset = df_processed[df_processed[\"result\"].apply(lambda results: \"ROSC\" in results)]\n",
-    "death_subset = df_processed[df_processed[\"result\"].apply(lambda results: \"zgon\" in results)]\n",
-    "\n",
-    "ros_time_stats = {\n",
-    "    \"Średni czas dla ROSC\": rosc_subset[\"time\"].mean(),\n",
-    "    \"Mediana czasu dla ROSC\": rosc_subset[\"time\"].median(),\n",
-    "    \"Odchylenie standardowe dla czasu ROSC\": rosc_subset[\"time\"].std(),\n",
-    "}\n",
-    "\n",
-    "zgon_time_stats = {\n",
-    "    \"Średni czas dla zgonu\": death_subset[\"time\"].mean(),\n",
-    "    \"Mediana czasu dla zgonu\": death_subset[\"time\"].median(),\n",
-    "    \"Odchylenie standardowe dla czasu zgonu\": death_subset[\"time\"].std(),\n",
-    "}\n",
-    "\n",
-    "# Wyniki do formy df\n",
-    "result_counts_df = pd.DataFrame.from_dict(result_counts, orient=\"index\", columns=[\"count\"]).sort_index()\n",
-    "proportion_rosc_death_df = pd.DataFrame.from_dict(proportion_rosc_death, orient=\"index\", columns=[\"proportion\"])\n",
-    "result_mechanism_dependency_df = pd.DataFrame.from_dict(result_mechanism_dependency, orient=\"index\")\n",
-    "procedure_result_dependency_df = pd.DataFrame.from_dict(procedure_result_dependency, orient=\"index\")\n",
-    "time_stats_df = pd.DataFrame({**ros_time_stats, **zgon_time_stats}, index=[0]).transpose()\n",
-    "\n",
-    "# Przykłady wyników \n",
-    "print(\"Wyniki raportów:\")\n",
-    "print(result_counts_df)\n",
-    "print(\"\\nProporcje ROSC i zgonów:\")\n",
-    "print(proportion_rosc_death_df)\n",
-    "print(\"\\nZależności wyniku od mechanizmu NZK:\")\n",
-    "print(result_mechanism_dependency_df)\n",
-    "print(\"Zależności wyników od leków:\")\n",
-    "print(medication_result_dependency_df)\n",
-    "print(\"\\nZależności wyników od urządzeń:\")\n",
-    "print(device_result_dependency_df)\n",
-    "print(\"\\nZależności wyników od metodyki:\")\n",
-    "print(methodology_result_dependency_df)\n",
-    "print(\"\\nStatystyki czasu:\")\n",
-    "print(time_stats_df)"
+    "print(\"\\nZaleznosc wyniku od mechanizmu NZK:\")\n",
+    "print(mechanism_dependency_df)"
    ]
   },
   {
