--- a/praca.ipynb
+++ b/praca.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -700,19 +700,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tabela: Mechanizmy i ich wystąpienia\n",
+      "Mechanizmy i ich wystąpienia\n",
       "   Mechanizm  Wystąpienia  Proporcja [%]\n",
       "0  asystolia          173          63.84\n",
       "1        PEA           95          35.06\n",
       "2         VF           44          16.24\n",
       "\n",
-      "Tabela: Współwystępowania mechanizmów\n",
+      "Współwystępowania mechanizmów\n",
       "        Mechanizmy  Wystąpienia\n",
       "0  PEA + asystolia           30\n",
       "1   VF + asystolia           20\n",
       "2         PEA + VF            8\n",
       "\n",
-      "Słownik wyników:\n",
+      "Słownik wyników (do dokumentu podsumowującego):\n",
       "{'total_reports': 271, 'mechanisms': [{'name': 'asystolia', 'count': 173, 'proportion': 63.84}, {'name': 'VF', 'count': 44, 'proportion': 16.24}, {'name': 'PEA', 'count': 95, 'proportion': 35.06}, {'name': 'VF + asystolia', 'count': 20, 'proportion': None}, {'name': 'PEA + VF', 'count': 8, 'proportion': None}, {'name': 'PEA + asystolia', 'count': 30, 'proportion': None}]}\n"
      ]
     }
@@ -805,24 +805,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Statystyki czasu:\n",
-      "                              Metryka     Wartość\n",
-      "0                     Najkrótszy czas    1.000000\n",
-      "1                     Najdłuższy czas  288.000000\n",
-      "2                         Średni czas   33.725926\n",
-      "3                       Mediana czasu   25.000000\n",
-      "4        Odchylenie standardowe czasu   31.836201\n",
-      "5  Ilość raportów bez danych o czasie  136.000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if \"time\" in df_processed.columns:\n",
     "    df.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n",
@@ -835,15 +820,16 @@
     "mean_time = df[\"time\"].mean()\n",
     "median_time = df[\"time\"].median()\n",
     "std_time = df[\"time\"].std()\n",
-    "missing_time_count = df[\"time\"].isna().sum()\n",
+    "missing_time_percentage = (df[\"time\"].isna().sum() / total_reports) * 100\n",
     "\n",
+    "# Do dokumentu podsumowującego\n",
     "time_stats = {\n",
-    "    \"Najkrótszy czas\": min_time,\n",
-    "    \"Najdłuższy czas\": max_time,\n",
-    "    \"Średni czas\": mean_time,\n",
-    "    \"Mediana czasu\": median_time,\n",
-    "    \"Odchylenie standardowe czasu\": std_time,\n",
-    "    \"Ilość raportów bez danych o czasie\": missing_time_count,\n",
+    "    \"min_time\": min_time,\n",
+    "    \"max_time\": max_time,\n",
+    "    \"mean_time\": mean_time,\n",
+    "    \"median_time\": median_time,\n",
+    "    \"std_time\": std_time,\n",
+    "    \"missing_time_percentage\": missing_time_percentage,\n",
     "}\n",
     "\n",
     "time_stats_df = pd.DataFrame(list(time_stats.items()), columns=[\"Metryka\", \"Wartość\"])\n",
