--- a/praca.ipynb
+++ b/praca.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -895,6 +895,79 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'procedures': [{'category': 'Leki',\n",
+       "   'name': 'adrenalina',\n",
+       "   'count': 176,\n",
+       "   'proportion': 64.94,\n",
+       "   'rosc': 42.05,\n",
+       "   'zgon': 59.09},\n",
+       "  {'category': 'Leki',\n",
+       "   'name': 'inne leki',\n",
+       "   'count': 48,\n",
+       "   'proportion': 17.71,\n",
+       "   'rosc': 41.67,\n",
+       "   'zgon': 60.42},\n",
+       "  {'category': 'Leki',\n",
+       "   'name': 'bikarbonat',\n",
+       "   'count': 37,\n",
+       "   'proportion': 13.65,\n",
+       "   'rosc': 40.54,\n",
+       "   'zgon': 59.46},\n",
+       "  {'category': 'Leki',\n",
+       "   'name': 'amiodaron',\n",
+       "   'count': 12,\n",
+       "   'proportion': 4.43,\n",
+       "   'rosc': 75.0,\n",
+       "   'zgon': 25.0},\n",
+       "  {'category': 'Metodyka',\n",
+       "   'name': 'intubacja',\n",
+       "   'count': 247,\n",
+       "   'proportion': 91.14,\n",
+       "   'rosc': 40.89,\n",
+       "   'zgon': 60.73},\n",
+       "  {'category': 'Metodyka',\n",
+       "   'name': 'masaż serca',\n",
+       "   'count': 227,\n",
+       "   'proportion': 83.76,\n",
+       "   'rosc': 38.33,\n",
+       "   'zgon': 62.56},\n",
+       "  {'category': 'Metodyka',\n",
+       "   'name': 'wentylacja',\n",
+       "   'count': 90,\n",
+       "   'proportion': 33.21,\n",
+       "   'rosc': 43.33,\n",
+       "   'zgon': 57.78},\n",
+       "  {'category': 'Metodyka',\n",
+       "   'name': 'defibrylacja',\n",
+       "   'count': 49,\n",
+       "   'proportion': 18.08,\n",
+       "   'rosc': 57.14,\n",
+       "   'zgon': 42.86},\n",
+       "  {'category': 'Urządzenia',\n",
+       "   'name': 'ambu',\n",
+       "   'count': 90,\n",
+       "   'proportion': 33.21,\n",
+       "   'rosc': 43.33,\n",
+       "   'zgon': 57.78},\n",
+       "  {'category': 'Urządzenia',\n",
+       "   'name': 'lucas',\n",
+       "   'count': 61,\n",
+       "   'proportion': 22.51,\n",
+       "   'rosc': 31.15,\n",
+       "   'zgon': 68.85}],\n",
+       " 'top_3_cooccurrences': [{'cooccurrence': ('intubacja', 'masaż serca'),\n",
+       "   'count': 214},\n",
+       "  {'cooccurrence': ('intubacja', 'wentylacja'), 'count': 90},\n",
+       "  {'cooccurrence': ('masaż serca', 'wentylacja'), 'count': 85}]}"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -989,6 +1062,34 @@
     "    by=\"count\", ascending=False\n",
     ").head(3)\n",
     "\n",
+    "# Tworzenie słownika dla procedur\n",
+    "procedures = [\n",
+    "    {\n",
+    "        \"category\": row[\"Kategoria\"],\n",
+    "        \"name\": row[\"Procedura\"],\n",
+    "        \"count\": row[\"Wystąpienia\"],\n",
+    "        \"proportion\": round(row[\"Proporcja [%]\"], 2),\n",
+    "        \"rosc\": round(row[\"ROSC [%]\"], 2),\n",
+    "        \"zgon\": round(row[\"Zgony [%]\"], 2),\n",
+    "    }\n",
+    "    for _, row in summary_df.iterrows()\n",
+    "]\n",
+    "\n",
+    "# Tworzenie słownika dla współwystępowania\n",
+    "top_3_cooccurrences = [\n",
+    "    {\n",
+    "        \"cooccurrence\": row[\"współwystępowanie\"],\n",
+    "        \"count\": row[\"count\"],\n",
+    "    }\n",
+    "    for _, row in top_3_methodology_cooccurrences_df.iterrows()\n",
+    "]\n",
+    "\n",
+    "# Słownik wyników do dokumentu podsumowującego\n",
+    "results_procedures = {\n",
+    "    \"procedures\": procedures,\n",
+    "    \"top_3_cooccurrences\": top_3_cooccurrences,\n",
+    "}\n",
+    "\n",
     "# Wyniki\n",
     "print(\"Tabela podsumowująca wszystkie procedury i ich proporcje do wszystkich raportów:\")\n",
     "print(summary_df)\n",
@@ -1016,7 +1117,8 @@
     "plt.savefig(output_path, format=\"png\", dpi=300, bbox_inches=\"tight\")\n",
     "\n",
     "# Wyświetlenie wykresu\n",
-    "plt.show()"
+    "plt.show()\n",
+    "results_procedures"
    ]
   },
   {
